--- a/css/addressBookView.css
+++ b/css/addressBookView.css
@@ -33,25 +33,24 @@
     border: solid 0px #42515f;
   }
   
-  .emp-text {
+  .address-text {
     font: normal normal bold 20px/25px Montserrat;
     font-family: "Montserrat", sans-serif;
     letter-spacing: 0px;
-    color: #82a70c;
+    color: rgb(5, 168, 233);
     text-transform: capitalize;
     padding-left: 10px;
   }
   
-  .emp-payroll {
+  .book-text {
     color: #42515f;
   }
-
   
   .add-button {
     font: normal normal normal 22px/29px Roboto;
     letter-spacing: 0px;
     color: #ffffff;
-    background: #82A70C 0% 0% no-repeat padding-box;
+    background: rgb(5, 168, 233) 0% 0% no-repeat padding-box;
     border-radius: 5px;
     opacity: 1;
     border: none;
@@ -70,7 +69,7 @@
     box-sizing: border-box;
   }
   
-  .employee-header {
+  .address-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -80,7 +79,7 @@
     padding-bottom: 25px;
   }
   
-  .emp-detail-text {
+  .address-detail-text {
     font: normal normal bold 24px/25px Roboto;
     letter-spacing: 0px;
     color: #42515f;
@@ -88,7 +87,7 @@
   }
   
   .emp-count {
-    background-color: #82a70c;
+    background-color: rgb(5, 168, 233);
     color: #ffffff;
     border-radius: 42%;
     font-size: 16px;
@@ -155,8 +154,9 @@
   
   td img {
     cursor: pointer;
-    padding-right: 30px;  
+    /* padding-right: 30px;   */
   }
+  
   .dept-label {
     background-color: #e9fea5;
     border-radius: 40%;
